--- a/connexus_test/stylesheets/main.css
+++ b/connexus_test/stylesheets/main.css
@@ -41,9 +41,13 @@ table {
 	text-align: left;
 }
 
-/*th, td {
-	border-right: solid black 3px;
-}*/
+td {
+	width: 250px;
+}
+
+td+td {
+	width: auto;
+}
 
 #img-box {
 	width: 25%;
