--- a/connexus_test/stylesheets/main.css
+++ b/connexus_test/stylesheets/main.css
@@ -35,7 +35,6 @@ a:hover {
 header {
 	z-index: 1;
 }
-
 table {
 	width: 100%;
 	text-align: left;
@@ -47,6 +46,11 @@ td {
 
 td+td {
 	width: auto;
+}
+
+#del {
+	width: 10%;
+
 }
 
 #img-box {
